
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pybricks-ble"
version = "0.0.0" # version is currently unused but a required metadata field
authors = [{ name = "Frederik Leonhardt", email = "frederik@leonhardt.co.nz" }]
description = "Communicate with Pybricks devices using BLE data broadcasting"
requires-python = ">=3.10"
license = { text = "GNU General Public License v3 (GPLv3)" }
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Communications",
    "Topic :: Software Development :: Embedded Systems",
]

dependencies = [
    "bleak >= 0.21.1",
    "bluetooth-adapters ~= 0.16",
    "dbus-fast ~= 2.15",
    #"pybricksdev >= 1.0.0a46", # FIXME: Causes dependency conflict, see README
    "semver <3.0.0,>=2.13.0", # FIXME: Required for pybricksdev == 1.0.0a46
]

[project.optional-dependencies]
debug = ["bluetooth-data-tools ~= 1.15"]
dev = ["pybricks-ble[debug]", "ruff ~= 0.3.7", "pytest ~= 7.4", "pytest-asyncio ~= 0.21.1"]

[project.urls]
Repository = "https://github.com/fkleon/pybricks-ble"

[project.scripts]
pb_broadcast = "pb_ble.cli.broadcast:main"
pb_observe = "pb_ble.cli.observe:main"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I001"]
ignore = ["F401"]

[tool.ruff.lint.isort]
combine-as-imports = true
