
[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pybricks-ble"
version = "0.0.0" # version is currently unused but a required metadata field
authors = [{ name = "Frederik Leonhardt", email = "frederik@leonhardt.co.nz" }]
description = "Communicate with Pybricks devices using BLE data broadcasting"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Communications",
    "Topic :: Software Development :: Embedded Systems",
]

dependencies = [
    "bleak >= 0.22.0",
    "bluetooth-adapters ~= 0.16",
    "cachetools ~= 5.3",
    "dbus-fast ~= 2.15",
    "pybricks @ git+https://github.com/fkleon/pybricks-api@ble-type-fixes",
]

[dependency-groups]
debug = ["bluetooth-data-tools ~= 1.15"]
dev = [
    "async-timer ~= 1.1.6",
    "mypy ~= 1.16.0",
    "pytest ~= 8.3",
    "pytest-asyncio ~= 1.0.0",
    "pytest-mock ~= 3.14.1",
    "python-dbusmock ~= 0.34.3",
    "ruff ~= 0.11.8",
    "types-cachetools ~= 5.3",
    "types-setuptools",
]
docs = ["pdoc ~= 15.0"]

[project.urls]
Repository = "https://github.com/fkleon/pybricks-ble"

[project.scripts]
pb_broadcast = "pb_ble.cli.broadcast:main"
pb_observe = "pb_ble.cli.observe:main"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
exclude = ["build/"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I001"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
combine-as-imports = true
